# ceg4n-experiments-tcad

./: .gitignore  README.md  run  setup.sh
.tours/: understand-code.tour
ceg4n/: pyproject.toml
ceg4n/src/ceg4n/abstractions/: esbmc_property_2d.py
ceg4n/src/ceg4n/utils/data/: cifar10.py
ceg4n/src/properties/: mnist_properties.py
code/: pyproject.toml  run.sh
code/tests/: test_ceg4n.py
data/networks/: iris_10x2.onnx  iris_15x2.onnx  iris_3x2.onnx  iris_4x2.onnx  mnist_64_10x1.onnx  mnist_64_10x2.onnx  mnist_64_25x1.onnx  mnist_64_25x2.onnx  mnist_64_50x1.onnx  mnist_64_50x2.onnx  mnist_784_10x1.onnx  mnist_784_10x2.onnx  mnist_784_25x1.onnx  mnist_784_25x2.onnx  mnist_784_50x1.onnx  mnist_784_50x2.onnx  seeds.py  seeds_10x1.onnx  seeds_15x1.onnx  seeds_2x1.onnx  seeds_4x1.onnx  seeds_5x1.onnx  test.py
data/properties/: ACASXU_run2a_1_1_batch_2000.json  ACASXU_run2a_1_2_batch_2000.json  ACASXU_run2a_1_3_batch_2000.json  ACASXU_run2a_1_4_batch_2000.json  ACASXU_run2a_1_5_batch_2000.json  ACASXU_run2a_1_6_batch_2000.json  ACASXU_run2a_1_7_batch_2000.json  ACASXU_run2a_1_8_batch_2000.json  ACASXU_run2a_1_9_batch_2000.json  ACASXU_run2a_2_1_batch_2000.json  ACASXU_run2a_2_2_batch_2000.json  ACASXU_run2a_2_3_batch_2000.json  ACASXU_run2a_2_4_batch_2000.json  ACASXU_run2a_2_5_batch_2000.json  ACASXU_run2a_2_6_batch_2000.json  ACASXU_run2a_2_7_batch_2000.json  ACASXU_run2a_2_8_batch_2000.json  ACASXU_run2a_2_9_batch_2000.json  ACASXU_run2a_3_1_batch_2000.json  ACASXU_run2a_3_2_batch_2000.json  ACASXU_run2a_3_3_batch_2000.json  ACASXU_run2a_3_4_batch_2000.json  ACASXU_run2a_3_5_batch_2000.json  (+43 more)
libs/nnenum/: README.rst  pyproject.toml
libs/nnenum/src/nnenum/: agen.py  gurobiInstance.py  lp_star_state.py  onnx_network.py  overapprox.py  settings.py  worker.py  zonotope.py
libs/nnenum/tests/: test_nnenum.py
libs/nnequiv/: pyproject.toml
libs/nnequiv/src/nnequiv/equivalence_properties/: epsilon.py  property.py
(+188 files in other folders)
