[tool.poetry]
name = "nnenum"
version = "0.1.0"
description = ""
authors = ["João Batista Pereira Matos Júnior <matosjunior.jb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "1.23.2"
scipy = "1.9.0"
threadpoolctl = "3.1.0"
onnx = "1.12.0"
onnxruntime = "1.12.1"
skl2onnx = "1.12"
swiglpk = "^5.0.5"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
